# Microvisor-Demo-MQTT

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README-AWS.md  README-AWS.txt  README-Azure.md  README-General.md  README.md  deploy.sh  docker-entrypoint.sh  env.list  toolchain.cmake
app/: .gitignore  CMakeLists.txt  application.c  application.h  azure_helper.c  azure_helper.h  base64.c  base64.h  config_handler.c  config_handler.h  config_helper.c  i2c_helper.c  i2c_helper.h  log_helper.c  log_helper.h  main.c  main.h  md5.c  md5.h  mqtt_handler.c  mqtt_handler.h  network_helper.c  network_helper.h  switch_helper.c  switch_helper.h  uart_logging.c  uart_logging.h  work.c  work.h
cifra/: CMakeLists.txt
config/: FreeRTOSConfig.h  stm32u5xx_hal_conf.h
